--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@reduxjs/toolkit": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.0.1",
+    "react-pick-color": "^2.0.0",
+    "react-redux": "^9.0.2",
     "react-router-dom": "^6.20.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.1.1"
